# osi-core

./: AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
docs/: osi-spec.md  package-plan.md
src/osi/: __init__.py
src/osi_core/: __init__.py  cli.py  dialects.py  diff.py  normalizer.py  resolver.py  serializer.py  validator.py
src/osi_core/adapters/: __init__.py  base.py
src/osi_core/converters/: __init__.py  base.py
src/osi_core/converters/cube/: __init__.py  (+2 more)
src/osi_core/models/: __init__.py  osi_model.py  types.py
src/osi_core/schemas/: osi-schema.json
tests/: helpers.py  test_base.py  test_diff.py  test_fixture_coverage.py  test_normalizer.py  test_osi_model.py  test_resolved_model.py  test_serializer.py  test_translator.py  test_validator.py
tests/converters/: test_cross_converter.py
tests/converters/cube/: test_exporter.py  test_importer.py  test_roundtrip.py
tests/converters/gooddata/: conftest.py  test_exporter.py  test_importer.py  test_models.py  test_roundtrip.py
tests/converters/metricflow/: test_exporter.py  test_importer.py  test_roundtrip.py
tests/converters/snowflake/: test_exporter.py  test_importer.py  test_roundtrip.py
tests/converters/superset/: test_exporter.py  test_importer.py  test_roundtrip.py
tests/fixtures/cube/: advanced.yaml  ecommerce.yaml  orders.yaml
tests/fixtures/metricflow/: advanced_metrics.yaml  basic.yaml  ecommerce.yaml
tests/fixtures/osi/: sample.yaml
tests/fixtures/superset/: sales_dashboard.yaml
tests/test_adapters/: test_base.py  test_metricflow.py  test_osi.py
(+13 files in other folders)
