[project]
name = "osi-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "outer-joined", email = "useawe@proton.me" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
osi-core = "osi:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.4",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "syrupy>=5.1.0",
]
